[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/base-nodes/menu-panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/settings/controls/keyboard_menu.gd" type="Script" id=2]
[ext_resource path="res://ui/base-nodes/button-model.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/press-start-2p.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/base-nodes/return-shortcut.tres" type="ShortCut" id=5]
[ext_resource path="res://ui/settings/controls/button-map.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/settings/controls/defaults.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[node name="KeyboardMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
button_model = ExtResource( 6 )
return_shortcut = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 342.0
margin_top = 227.0
margin_right = 682.0
margin_bottom = 349.0

[node name="MenuPanel" parent="MarginContainer" instance=ExtResource( 1 )]
margin_right = 340.0
margin_bottom = 122.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_right = 340.0
margin_bottom = 122.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 328.0
margin_bottom = 110.0

[node name="Map" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 316.0

[node name="OtherButtons" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 316.0
margin_bottom = 98.0

[node name="Box" parent="MarginContainer/MarginContainer/VBoxContainer/OtherButtons" instance=ExtResource( 7 )]
margin_right = 316.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer/OtherButtons"]
margin_top = 26.0
margin_right = 316.0
margin_bottom = 42.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 16

[node name="Change" parent="MarginContainer/MarginContainer/VBoxContainer/OtherButtons" instance=ExtResource( 3 )]
margin_top = 46.0
margin_right = 316.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../Return")
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Controller Bindings"

[node name="Return" parent="MarginContainer/MarginContainer/VBoxContainer/OtherButtons" instance=ExtResource( 3 )]
margin_left = 104.0
margin_top = 72.0
margin_right = 212.0
margin_bottom = 94.0
focus_neighbour_top = NodePath("../Change")
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
shortcut = ExtResource( 5 )
text = "Return"
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/OtherButtons/Change" to="." method="_on_Change_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/OtherButtons/Return" to="." method="_on_Return_pressed"]
